# simplification

./: .gitattributes  .gitignore  .travis.yml  CITATION.cff  CMakeLists.txt  Makefile  README.md  README.rst  appveyor.yml  benchmark_runner.py  dev-requirements.txt  license.txt  manifest.in  pyproject.toml  rdp_p.pxd  release.py  setup.cfg  setup.py  test.pyd
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: wheels.yml
ci/: before_deploy.sh  build_wheel.sh  install.sh  osx_utils.sh  pre_install.py  pre_install.sh  script.sh  travis_osx_steps.sh
simplification/: cutil.c  cutil.cpp  cutil.html  cutil.pyx  header.h  rdp_p.pxd  util.py
simplification.egg-info/: PKG-INFO  SOURCES.txt
simplification/test/: cprofile_rust_cython.py  cprofile_rust_cython_complex.py  cprofile_rust_cython_shapely.py  output_stats_rust_cython  output_stats_rust_cython_complex  output_stats_rust_cython_shapely  test.py  test_simplification.py
src/: util.py
src/simplification/: __init__.py  cutil.pyi  cutil.pyx  header.h  util.py  util.pyi
test/: cprofile_rust_cython.py  cprofile_rust_cython_complex.py  cprofile_rust_cython_shapely.py  output_stats_rust_cython  output_stats_rust_cython_complex  output_stats_rust_cython_shapely  test_simplification.py
tests/: coords.json  cprofile_rust_cython.py  cprofile_rust_cython_complex.py  cprofile_rust_cython_shapely.py  output_stats_rust_cython_shapely  test_simplification.py
wheel_ok/: simplification-0.2.2-cp27-cp27m-win32.whl  simplification-0.2.2-cp27-cp27m-win_amd64.whl
