[project]
name = "simplification"
dynamic = ["version", "readme"]
description = "Fast linestring simplification using RDP or Visvalingam-Whyatt and a Rust binary"
requires-python = ">=3.9"
dependencies = [
    "numpy >= 2.0.0",
]
authors = [{ name = "Stephan Hügel", email = "urschrei@gmail.com" }]
license = {file = "LICENSE.md"}
keywords = ["Geo", "Polyline", "Linestring", "Ramer-Douglas-Peucker", "Douglas-Peucker", "Visvalingam-Whyatt"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Blue Oak Model License (BlueOak-1.0.0)",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: GIS"
    ]
[project.urls]
Repository = "https://github.com/urschrei/simplification"
Tracker = "https://github.com/urschrei/simplification/issues"

[project.optional-dependencies]
test = ["pytest >= 7.4.2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
simplification = ["*.dylib", "*.dll", "*.so", "*.h"]

[tool.setuptools.dynamic]
readme = {file = ["README.md", "LICENSE.md"], content-type = "text/markdown"}

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 45",
    "setuptools-scm[toml] >= 6.2",
    "numpy >= 2.0.0",
    "cython >= 0.29.0",
    "wheel >= 0.29.0"
]

[tool.pytest.ini_options]
minversion = "6.2.2"
addopts = [
    "--import-mode=importlib",
]
testpaths = [
    "tests",
]

[tool.setuptools_scm]
write_to = "src/_version.py"

