[project]
name = "simplification"
version = "1.0.0"
description = "Fast linestring simplification using RDP or Visvalingam-Whyatt and a Rust binary"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy >= 2.0.0",
]
authors = [{ name = "Stephan Hügel" }, { email = "urschrei@gmail.com" }]
maintainers = [{ name = "Stephan Hügel" }, { email = "urschrei@gmail.com" }]
license = "BlueOak-1.0.0"
license-files = ["LICENSE.md"]
keywords = ["Geo", "Polyline", "Linestring", "Ramer-Douglas-Peucker", "Douglas-Peucker", "Visvalingam-Whyatt"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: GIS"
    ]
[project.urls]
Homepage = "https://github.com/urschrei/simplification"
Repository = "https://github.com/urschrei/simplification"
Documentation = "https://github.com/urschrei/simplification#readme"
Issues = "https://github.com/urschrei/simplification/issues"
Download = "https://github.com/urschrei/simplification/releases"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.scikit-build]
minimum-version = "build-system.requires"
wheel.packages = ["src/simplification"]
# Build a single Stable ABI (abi3) wheel for CPython 3.11+. Typed memoryviews,
# which cutil.pyx relies on, are only available under the Limited API from
# CPython 3.11 onwards, so that is the floor. CPython 3.10 still receives a
# regular, version-specific wheel.
wheel.py-api = "cp311"
wheel.reproducible = true

[build-system]
requires = [
    "scikit-build-core>=0.12",
    "numpy >= 2.0.0",
    "cython >= 3.1.0",
    "cython-cmake"
]
build-backend = "scikit_build_core.build"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.{h,c,pyx,pxd,dylib,so,dll}" }, { file = "CMakeLists.txt" }]

[tool.pytest.ini_options]
minversion = "8.4.1"
addopts = [
    "--import-mode=importlib",
]
testpaths = [
    "tests",
]

[tool.cibuildwheel]
build-frontend = "build[uv]"
test-requires = ["pytest"]
test-command = "pytest {package}"

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }

[tool.cibuildwheel.windows]
# cibuildwheel 4.0.0 runs delvewheel by default on Windows. We already bundle
# rdp.dll next to the extension module via CMake, and it is resolved at runtime
# from the module's own directory, so the repair step is unnecessary and fails
# because delvewheel does not search the wheel's package directory for rdp.dll.
repair-wheel-command = ""
