[metadata]
name = simplification
version = attr: simplification.util.__version__
description = Fast linestring simplification using RDP or Visvalingam-Whyatt and a Rust binary
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/urschrei/simplification
author = Stephan Hügel
author_email = urschrei@gmail.com
license = MIT
license_file = license.txt
keywords = Geo, Polyline, Linestring, Ramer-Douglas-Peucker, Douglas-Peucker, Visvalingam-Whyatt
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: GIS
project_urls =
    Source = https://github.com/urschrei/simplification
    Tracker = https://github.com/urschrei/simplification/issues

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
    cython >= 0.29.0
python_requires = >=3.7
setup_requires =
    setuptools_scm
    cython >= 0.29.0
tests_require = pytest >= 6.2.2
test_suite = test

[bdist_wheel]
universal = 1

[options.extras_require]
numpy =
    numpy >= 1.11.0
test =
    pytest >= 6.2.2
all =
    %(test)s
